src/features/ResultList/components/ResultList/ResultList.module.scss
@import "@/assets/styles/variables";

.resultList {
  margin-bottom: $s;
  padding: 0 0 $s;
  .resultsContainer {
    display: grid;
    grid-template-columns: auto 1fr;
    column-gap: $l;
    align-items: flex-start;
    position: relative;
    max-width: 2300px;
    width: auto;
    padding: $m;
    .resultsTableContainer.pathfinder {
      .tableHead {
        grid-template-columns: 1fr 112px 110px 90px 24px;
      }
    }
    .resultsTable {
      box-shadow: $dropShadow;
      font-size: $bodyTwoSize;
      border-radius: $largeBorderRadius;
      .tableBody {
        &>div:nth-child(odd){
          background-color: $lightGray;
        }
        &>div:first-child {
          background-color: $purpleTwo;
        }
      }
      .tableHead {
        border-bottom: 1px solid $midGray;
        display: grid;
        padding: 12px $s;
        border-radius: 5px 5px 0 0;
        user-select: none;
        grid-template-columns: 1fr 112px 110px 90px 90px 24px;
        column-gap: $s;
        .head {
          display: flex;
          align-items: center;
          text-align: center;
          font-size: 10px;
          font-weight: 800;
          line-height: 1.25;
          text-transform: uppercase;
          color: $white;
          width: min-content;
        }
        .checkboxContainer {
          display: none;
          label {
            margin: 0;
          }
        }
        .nameHead {
          text-align: left;
        }
        .fdaHead {
          cursor: default;
          position: relative;
        }
        .fdaHead, .evidenceHead, .scoreHead, .pathsHead, .nameHead {
          svg {
            margin-left: 2px;
            width: 24px;
            height: 24px;
            circle {
              stroke: $white;
            }
            circle:last-child {
              fill: $white;
            }
            path {
              fill: $white;
            }
          }
        }
        .scoreSpan {
          font-size: 12px;
          text-transform: none;
        }
        .nameHead, .evidenceHead, .scoreHead, .pathsHead {
          &:hover {
            cursor: pointer;
          }
          .chev {
            display: none;
          }
          &.true, &.false {
            position: relative;
            .chev {
              display: block;
              width: 24px;
              height: 24px;
              transition: $defaultAnim;
              path {
                fill: transparent;
                stroke: $white;
              }
            }
          }
          &.false {
            .chev {
              transform: rotate(180deg);
            }
          }
        }
      }
    }
  }
}

.pagination {
  display: grid;
  margin-top: $s;
  grid-template-columns: 1fr 1fr;
  .perPage > div > div {
    z-index: 1000 !important;
  }
  .perPageContainer {
    display: flex;
    align-items: center;
    .perPage {
      margin-left: $xs;
      select {
        width: 116px;
      }
    }
  }
}
.pageNums {
  margin: 0 0 0 auto;
}

.errorText {
  padding: 20px 12px;
}

.loadingText {
  max-width: 650px;
  margin-left: auto;
  margin-right: auto;
}

.bottomLoadingButtonContainer {
  margin-top: $xl;
  display: grid;
  justify-content: center;
}

